--- a/res/layout/activity_relative_layout.xml
+++ b/res/layout/activity_relative_layout.xml
@@ -26,6 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_marginBottom="68dp"
         android:text="Location: General Luna Streets, Vigan, Luzon 2700, Philippines"
         android:textColor="#000000"
@@ -38,8 +39,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_below="@+id/textView2"
-        android:layout_marginTop="-68dp"
+        android:layout_marginTop="-68sp"
         android:text="Distance From UST: 401 km"
         android:textColor="#000000"
         android:textSize="20sp"
@@ -51,8 +53,9 @@
         android:layout_width="wrap_content"
         android:layout_height="304dp"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="64sp"
         app:srcCompat="@drawable/SALCEDO" />
 
 </RelativeLayout>
